# shandu

./: .env.example  .gitignore  ARCH.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
examples/: 3D_bioprinting.md  Wind_Turbine.md  deepseek.md
shandu/: README.md  __init__.py  cli.py  config.py  contracts.py  engine.py  interfaces.py
shandu/agents/: __init__.py  citation_agent.py  langgraph_agent.py  lead.py  search_subagent.py
shandu/agents/nodes/: report_generation.py
shandu/agents/processors/: report_generator.py
shandu/orchestration/: __init__.py  lead_orchestrator.py
shandu/research/: researcher.py
shandu/retrieval/: __init__.py  retrieval.py
shandu/runtime/: __init__.py  async_runner.py  bootstrap.py  cost_tracker.py
shandu/scraper/: scraper.py
shandu/search/: search.py
shandu/services/: __init__.py  ai_search.py  memory.py  report.py  scrape.py  search.py
shandu/ui/: __init__.py  gradio_app.py  rich_frontend.py
tests/: test_ai_search_service.py  test_async_runner_regression.py  test_citation_agent_fallback.py  test_citation_registry.py  test_config.py  test_config_api_keys.py  test_cost_tracker.py  test_engine_stream.py  test_gradio_app.py  test_orchestrator_loop.py  test_report_generator.py  test_rich_frontend.py  test_rich_ui.py  test_scrape_service.py  test_scraper.py  test_search_backend.py  test_search_subagent_fallback.py
